--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "antd": "^5.21.2",
     "next": "^13.5.7",
     "react": "^18.3.1",
